# bcat

./: .gitignore  ML_VERSION  snapcraft.yaml
.github/workflows/: CreateRelease.yml  Linux.yml  LinuxSnap.yml  MacOS.yml  QmakeBuilds.yml  Windows.yml
distrib/: demo.xlsx  temp.data
distrib/shaders/: orthosis.frag  orthosis.vert  phong.frag
scripts/Windows/: 2_deploy.sh
scripts/Windows/resources/: ExecWaitJob.nsh  meshlab.nsi  nsis_script.sh
src/: CMakeLists.txt  meshlab_mini.sln
src/common/: CMakeLists.txt  meshlab-common.vcxproj  meshlab-common.vcxproj.filters  mlapplication.h  pluginCommonData.cpp  pluginCommonData.h
src/common/ml_document/: cmesh.h  mesh_document.cpp  mesh_document.h  mesh_model.cpp  mesh_model.h
src/common/ml_shared_data_context/: ml_shared_data_context.cpp  ml_shared_data_context.h
src/meshlab/: CMakeLists.txt  TalentLandReport.lrxml  TalentLandReportLight.lrxml  demo.xlsx  glarea.cpp  glarea.h  glarea_setting.cpp  layerDialog.cpp  layerDialog.h  main.cpp  mainwindow.h  mainwindow_Init.cpp  mainwindow_RunTime.cpp  meshlab.aps  meshlab.pro  meshlab.qrc  meshlab.vcxproj  meshlab.vcxproj.filters  meshlab_zh.qm  meshlab_zh.ts  ml_rendering_actions.cpp  ml_std_par_dialog.cpp  ml_std_par_dialog.h  reportTemplate.lrxml  temp.data  writeExcel.py
src/meshlab/dialogs/: sliceDialog.ui
src/meshlab/rich_parameter_gui/: richparameterlistframe.cpp
src/meshlabplugins/decorate_background/: decorate_background.vcxproj  decorate_background.vcxproj.filters
src/meshlabplugins/edit_mainplugin/: CMakeLists.txt  edit_main.aps  edit_main.pro  edit_main.qrc  edit_main.vcxproj  edit_main.vcxproj.filters  edit_main_factory.cpp  edit_main_factory.h  edit_main_zh.qm  edit_main_zh.ts  edit_pickandalign.cpp  edit_pickandalign.h  edit_slice.cpp  edit_slice.h  pickandalign.ui  resource.h
src/use_cpu_opengl/: CMakeLists.txt  UseCPUOpenGL.vcxproj  UseCPUOpenGL.vcxproj.filters
(+156 files in other folders)
